Fix hashchange event with scroll collision & add dark mode classes.

--- a/src/docs.css
+++ b/src/docs.css
@@ -29,11 +29,11 @@
 }
 
 #TableOfContents > ul > li > a {
-	@apply block pl-2.5 font-normal border-l border-white transition-colors duration-200 hover:text-gray-900 dark:hover:text-white hover:border-gray-300 after:content-['#'] after:text-blue-700 after:ml-2 after:opacity-0 hover:after:opacity-100 after:transition-opacity;
+	@apply block pl-2.5 font-normal border-l border-white duration-200 hover:text-gray-900 transition-none dark:hover:text-white hover:border-gray-300 after:content-['#'] after:text-blue-700 dark:after:text-blue-500 dark:border-gray-900 dark:hover:border-gray-700 after:ml-2 after:opacity-0 hover:after:opacity-100 after:transition-opacity after:duration-100;
 }
 
 #TableOfContents > ul > li > ul > li > a {
-	@apply pl-6 border-l border-white transition-colors duration-200 hover:text-gray-900 dark:hover:text-white hover:border-gray-300 after:content-['#'] after:text-blue-700 after:ml-2 after:opacity-0 hover:after:opacity-100 after:transition-opacity;
+	@apply pl-6 border-l border-white duration-200 hover:text-gray-900 transition-none dark:hover:text-white hover:border-gray-300 after:content-['#'] after:text-blue-700 dark:after:text-blue-500 dark:border-gray-900 dark:hover:border-gray-700 after:ml-2 after:opacity-0 hover:after:opacity-100 after:transition-opacity after:duration-100;
 }
 
 #TableOfContents > ul > li > ul {
